# cdgtools

./: .pre-commit-config.yaml  CHANGELOG.md  CODE_OF_CONDUCT.md  LICENSE  README.md  mkdocs.yml  pyproject.toml  tasks.py
cdgtools/: __init__.py  _utils.py  constants.py  parametrizations.py
docs/: index.md  license.md
docs/usage/: 2d_parametrizations.md  3d_parametrizations.md  working_with_parametrizations.md
