[tool.poetry]
name = "cdgtools"
version = "0.1.0"
description = ""
authors = [
    "Mario Vago Marzal <mariovagomarzal@gmail.com>",
    "Pedro Pasalodos Guiral <pedropasa2003@gmail.com>"
]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
sympy = "^1.12"
numpy = "^1.26.1"


[tool.poetry.group.dev.dependencies]
ruff = "^0.1.3"
pytest = "^7.4.3"
pre-commit = "^3.5.0"
invoke = "^2.2.0"
pytest-doctestplus = "^1.0.0"
mypy = "^1.6.1"
mkdocs-material = "^9.4.8"
mkdocstrings = {extras = ["python"], version = "^0.23.0"}
pytkdocs = {extras = ["numpy-style"], version = "^0.16.1"}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff.lint.per-file-ignores]
"__init__.py" = ["F403"]
"**/{tests,docs,tools}/*" = ["F403"]
